draft-ietf-emu-eaptunnel-req-08

--- a/draft-ietf-emu-eaptunnel-req-08.html
+++ b/draft-ietf-emu-eaptunnel-req-08.html
@@ -153,13 +153,13 @@
 <tr><td class="header">EMU Working Group</td><td class="header">K. Hoeper</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Motorola, Inc.</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">S. Hanna</td></tr>
-<tr><td class="header">Expires: December 26, 2010</td><td class="header">Juniper Networks</td></tr>
+<tr><td class="header">Expires: March 21, 2011</td><td class="header">Juniper Networks</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">H. Zhou</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">J. Salowey, Ed.</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Cisco Systems, Inc.</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 24, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">September 17, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Requirements for a Tunnel Based EAP Method<br />draft-ietf-emu-eaptunnel-req-07.txt</h1>
+<h1><br />Requirements for a Tunnel Based EAP Method<br />draft-ietf-emu-eaptunnel-req-08.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -180,7 +180,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 26, 2010.</p>
+This Internet-Draft will expire on March 21, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -399,7 +399,7 @@ Use Cases</h3>
 <a name="rfc.section.3.1"></a><h3>3.1.&nbsp;
 Password Authentication</h3>
 
-<p>Many legacy systems only support user authentication with passwords.  Some of these systems require transport of the actual username and password to the authentication server.  This is true for systems where the authentication server does not have access to the cleartext password or a consistent transform of the cleartext password.  Example of such systems are one time password (OTP) systems and other systems where the username and password are submitted to an external party for validation.  The tunnel method MUST support transporting cleartext username and password to the EAP server.  It MUST NOT reveal information about the username and password to parties in the communication path between the peer and the EAP Server. The advantage any attacker gains against the tunneled method when employing a username and password for authentication MUST be through interaction and not computation.  The tunnel MUST provide protection from man-in-the-middle attacks. The combination of the tunnel authentication and password authentication MUST enable mutual authentication.
+<p>Many legacy systems only support user authentication with passwords.  Some of these systems require transport of the actual username and password to the authentication server.  This is true for systems where the authentication server does not have access to the cleartext password or a consistent transform of the cleartext password.  Example of such systems are one time password (OTP) systems and other systems where the username and password are submitted to an external party for validation.  The tunnel method MUST support transporting cleartext username and password to the EAP server.  It MUST NOT reveal information about the username and password to parties in the communication path between the peer and the EAP Server. The advantage any attacker gains against the tunneled method when employing a username and password for authentication MUST be through interaction and not computation.  The tunnel MUST support protection from man-in-the-middle attacks. The combination of the tunnel authentication and password authentication MUST enable mutual authentication.
 </p>
 <p>Since EAP authentication occurs before network access is granted the tunnel method SHOULD enable an inner exchange to provide support for minimal password management tasks including password change, "new PIN mode", and "next token mode" required by some systems.
 </p>
@@ -408,7 +408,7 @@ Password Authentication</h3>
 <a name="rfc.section.3.2"></a><h3>3.2.&nbsp;
 Protection of Weak EAP Methods</h3>
 
-<p>Some existing EAP methods have vulnerabilities that could be eliminated or reduced by running them inside a protected tunnel.  For example, a EAP-MD5 does not provide mutual authentication or protection from dictionary attacks.  Without extra protection, tunnel-based EAP methods are vulnerable to a special type of tunnel man-in-the-middle attack <a class='info' href='#TUNNEL-MITM'>[TUNNEL&#8209;MITM]<span> (</span><span class='info'>Asokan, N., Niemi, V., and K. Nyberg, &ldquo;Man-in-the-Middle in Tunnelled Authentication Protocols,&rdquo; November&nbsp;2002.</span><span>)</span></a>. This attack is referred to as "tunnel MitM attack" in the remainder of this document. The additional protection needed to thwart tunnel MitM attacks depends on the inner method executed within the tunnel. When weak methods are used, these attacks can be mitigated via security policies that require the method to be used only within a tunnel. On the other hand, a technical solution (so-called cryptographic bindings) can be used whenever the inner method derives key material and is not susceptible to attacks outside a tunnel. Only the latter mitigation technique can be made an actual requirement for tunnel-based EAP methods (see <a class='info' href='#cryptobind'>Section&nbsp;4.6.3<span> (</span><span class='info'>Cryptographic Binding with the TLS Tunnel</span><span>)</span></a>), while security policies are outside the scope of this requirement draft. Please refer to the NIST Recommendation for EAP Methods Used in Wireless Network Access Authentication <a class='info' href='#NIST SP 800-120'>[NIST SP 800&#8209;120]<span> (</span><span class='info'>Hoeper, K. and L. Chen, &ldquo;Recommendation for EAP Methods Used in Wireless Network Access Authentication,&rdquo; September&nbsp;2009.</span><span>)</span></a> for a discussion on security policies and complete solutions for thwarting tunnel MitM attacks. 
+<p>Some existing EAP methods have vulnerabilities that could be eliminated or reduced by running them inside a protected tunnel.  For example, a EAP-MD5 does not provide mutual authentication or protection from dictionary attacks.  Without extra protection, tunnel-based EAP methods are vulnerable to a special type of tunnel man-in-the-middle attack <a class='info' href='#TUNNEL-MITM'>[TUNNEL&#8209;MITM]<span> (</span><span class='info'>Asokan, N., Niemi, V., and K. Nyberg, &ldquo;Man-in-the-Middle in Tunnelled Authentication Protocols,&rdquo; November&nbsp;2002.</span><span>)</span></a>. This attack is referred to as "tunnel MitM attack" in the remainder of this document. The additional protection needed to thwart tunnel MitM attacks depends on the inner method executed within the tunnel. When weak methods are used, these attacks can be mitigated via security policies that require the method to be used only within a tunnel. On the other hand, a technical solution (so-called cryptographic bindings) can be used whenever the inner method derives key material and is not susceptible to attacks outside a tunnel. Only the latter mitigation technique can be made an actual requirement for tunnel-based EAP methods (see <a class='info' href='#cryptobind'>Section&nbsp;4.6.3<span> (</span><span class='info'>Cryptographic Binding with the TLS Tunnel</span><span>)</span></a>), while security policies are outside the scope of this requirement draft. Please refer to the NIST Recommendation for EAP Methods Used in Wireless Network Access Authentication <a class='info' href='#NIST SP 800-120'>[NIST SP 800&#8209;120]<span> (</span><span class='info'>Hoeper, K. and L. Chen, &ldquo;Recommendation for EAP Methods Used in Wireless Network Access Authentication,&rdquo; September&nbsp;2009.</span><span>)</span></a> and <a class='info' href='#LCN 2010'>[LCN 2010]<span> (</span><span class='info'>Hoeper, K. and L. Chen, &ldquo;An Inconvenient Truth about Tunneled Authentications,&rdquo; September&nbsp;2009.</span><span>)</span></a> for a discussion on security policies and complete solutions for thwarting tunnel MitM attacks. 
 </p>
 <p>The tunnel method MUST support protection of weak EAP methods. Cryptographic protection from tunnel MitM attacks MUST be provided for all key generating methods. In combination with an appropriate security policy this will thwart MitM attacks against inner methods. 
 </p>
@@ -788,7 +788,7 @@ Chained Methods</h3>
 Cryptographic Binding with the TLS Tunnel</h3>
 
 <p>The tunnel method MUST provide a mechanism to bind the tunnel protocol and 
-the inner EAP method. This property is referred to as cryptographic binding. Such bindings are an important tool for mitigating the tunnel MitM attacks on tunnel methods <a class='info' href='#TUNNEL-MITM'>[TUNNEL&#8209;MITM]<span> (</span><span class='info'>Asokan, N., Niemi, V., and K. Nyberg, &ldquo;Man-in-the-Middle in Tunnelled Authentication Protocols,&rdquo; November&nbsp;2002.</span><span>)</span></a>. Cryptographic bindings enable the complete prevention of tunnel MitM attacks without the need of additional security policies as long as the inner method derives keys and is not vulnerable to attacks outside a protected tunnel <a class='info' href='#KHLC07'>[KHLC07]<span> (</span><span class='info'>Hoeper, K. and L. Chen, &ldquo;Where EAP Security Claims Fail,&rdquo; August&nbsp;2007.</span><span>)</span></a>. Even though weak or non-key deriving inner methods may be permitted, and thus security policies preventing tunnel MitM attacks are still necessary, the tunnel method MUST provide cryptographic bindings, because only this allows migrating to more secure, policy-independent implementations. 
+the inner EAP method. This property is referred to as cryptographic binding. Such bindings are an important tool for mitigating the tunnel MitM attacks on tunnel methods <a class='info' href='#TUNNEL-MITM'>[TUNNEL&#8209;MITM]<span> (</span><span class='info'>Asokan, N., Niemi, V., and K. Nyberg, &ldquo;Man-in-the-Middle in Tunnelled Authentication Protocols,&rdquo; November&nbsp;2002.</span><span>)</span></a>. Cryptographic bindings enable the complete prevention of tunnel MitM attacks without the need of additional security policies as long as the inner method derives keys and is not vulnerable to attacks outside a protected tunnel <a class='info' href='#LCN 2010'>[LCN 2010]<span> (</span><span class='info'>Hoeper, K. and L. Chen, &ldquo;An Inconvenient Truth about Tunneled Authentications,&rdquo; September&nbsp;2009.</span><span>)</span></a>. Even though weak or non-key deriving inner methods may be permitted, and thus security policies preventing tunnel MitM attacks are still necessary, the tunnel method MUST provide cryptographic bindings, because only this allows migrating to more secure, policy-independent implementations. 
 </p>
 <p>Cryptographic bindings are typically achieved by securely mixing the
    established keying material (say tunnel key TK) from the tunnel
@@ -822,8 +822,8 @@ the inner EAP method. This property is referred to as cryptographic binding. Suc
 </pre></div><table border="0" cellpadding="0" cellspacing="2" align="center"><tr><td align="center"><font face="monaco, MS Sans Serif" size="1"><b>&nbsp;Figure&nbsp;1: Compound Keys&nbsp;</b></font><br /></td></tr></table><hr class="insert" />
 
 <p>Furthermore, all compound keys CTK_i and all keys derived from it
-SHOULD be derived in accordance to the guidelines for key derivations and key 
-hierarchies as specified in <a class='info' href='#keyest'>Section&nbsp;4.2.1.1.3<span> (</span><span class='info'>Tunnel Authentication and Key Establishment</span><span>)</span></a>. In particular, all derived keys 
+SHOULD follow the recommendations for key derivations and key 
+hierarchies as specified in <a class='info' href='#NIST SP 800-108'>[NIST SP 800&#8209;108]<span> (</span><span class='info'>Chen, L., &ldquo;Recommendation for Key Derivation Using Pseudorandom Functions,&rdquo; April&nbsp;2008.</span><span>)</span></a>. In particular, all derived keys 
 MUST have a lifetime assigned that does not exceed the lifetime of any key 
 higher in the key hierarchy.  The derivation MUST prevent a compromise in one part of the system from leading to compromises in other parts of the system that relay on keys at the same or higher level in the hierarchy.
 </p>
@@ -969,6 +969,8 @@ References</h3>
 <td class="author-text">Mahy, R., &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-mahy-eap-enrollment-01.txt">An Extensible Authentication Protocol (EAP) Enrollment Method</a>,&rdquo; draft-mahy-eap-enrollment-01 (work in progress), March&nbsp;2006 (<a href="http://www.ietf.org/internet-drafts/draft-mahy-eap-enrollment-01.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="KHLC07">[KHLC07]</a></td>
 <td class="author-text">Hoeper, K. and L. Chen, &ldquo;Where EAP Security Claims Fail,&rdquo; ICST QShine&nbsp;, August&nbsp;2007.</td></tr>
+<tr><td class="author-text" valign="top"><a name="LCN 2010">[LCN 2010]</a></td>
+<td class="author-text">Hoeper, K. and L. Chen, &ldquo;An Inconvenient Truth about Tunneled Authentications,&rdquo; Proceedings of 35th Annual IEEE Conference on Local Computer Networks (LCN 2010)&nbsp;, September&nbsp;2009.</td></tr>
 <tr><td class="author-text" valign="top"><a name="NIST SP 800-108">[NIST SP 800-108]</a></td>
 <td class="author-text">Chen, L., &ldquo;Recommendation for Key Derivation Using Pseudorandom Functions,&rdquo; Draft NIST Special Publication&nbsp;800-108, April&nbsp;2008.</td></tr>
 <tr><td class="author-text" valign="top"><a name="NIST SP 800-120">[NIST SP 800-120]</a></td>
