draft-ietf-ippm-twamp-session-cntrl-07

--- a/draft-ietf-ippm-twamp-session-cntrl-07.html
+++ b/draft-ietf-ippm-twamp-session-cntrl-07.html
@@ -159,7 +159,7 @@
 <tr><td class="header">Expires: October 10, 2010</td><td class="header">April 08, 2010</td></tr>
 </table></td></tr></table>
 <h1><br />Individual Session Control Feature
-    for TWAMP<br />draft-ietf-ippm-twamp-session-cntrl-06</h1>
+    for TWAMP<br />draft-ietf-ippm-twamp-session-cntrl-07</h1>
 
 <h3>Abstract</h3>
 
@@ -324,8 +324,8 @@ Introduction</h3>
 </p>
 <p>Throughout this memo, the bits marked MBZ (Must Be Zero) MUST be set
       to zero by senders and MUST be ignored by receivers. Also, the HMAC
-      (Hashed Message Authentication Code) is calculated as defined in Section
-      3.2 <a class='info' href='#RFC4656'>[RFC4656]<span> (</span><span class='info'>Shalunov, S., Teitelbaum, B., Karp, A., Boote, J., and M. Zekauskas, &ldquo;A One-way Active Measurement Protocol (OWAMP),&rdquo; September&nbsp;2006.</span><span>)</span></a>.
+      (Hashed Message Authentication Code) MUST be calculated as defined in
+      Section 3.2 of <a class='info' href='#RFC4656'>[RFC4656]<span> (</span><span class='info'>Shalunov, S., Teitelbaum, B., Karp, A., Boote, J., and M. Zekauskas, &ldquo;A One-way Active Measurement Protocol (OWAMP),&rdquo; September&nbsp;2006.</span><span>)</span></a>.
 </p>
 <a name="anchor2"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
