--- a/draft-ietf-dhc-dhcpv6-opt-netboot-09.html
+++ b/draft-ietf-dhc-dhcpv6-opt-netboot-09.html
@@ -9,7 +9,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -85,11 +85,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -122,7 +122,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -154,46 +154,40 @@
 <tr><td class="header">DHC</td><td class="header">T. Huth</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">J. Freimann</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">IBM Germany Research &amp;</td></tr>
-<tr><td class="header">Expires: July 8, 2010</td><td class="header">Development GmbH</td></tr>
+<tr><td class="header">Expires: December 8, 2010</td><td class="header">Development GmbH</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">V. Zimmer</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Intel</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">D. Thaler</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Microsoft</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">January 04, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">June 6, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />DHCPv6 option for network boot<br />draft-ietf-dhc-dhcpv6-opt-netboot-08</h1>
+<h1><br />DHCPv6 option for network boot<br />draft-ietf-dhc-dhcpv6-opt-netboot-09</h1>
 
 <h3>Abstract</h3>
 
 <p>
        The Dynamic Host Configuration Protocol for IPv6 (DHCPv6) provides
        a framework for passing configuration information to nodes on a network.
-       This document describes new options for DHCPv6 which are required for
+       This document describes new options for DHCPv6 which SHOULD be used for
        booting a node from the network.
       
 </p>
 <h3>Status of this Memo</h3>
 <p>
-This Internet-Draft is submitted to IETF in full
+This Internet-Draft is submitted  in full
 conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.</p>
 <p>
 Internet-Drafts are working documents of the Internet Engineering
-Task Force (IETF), its areas, and its working groups.
-Note that other groups may also distribute working documents as
-Internet-Drafts.</p>
+Task Force (IETF).  Note that other groups may also distribute
+working documents as Internet-Drafts.  The list of current
+Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>
 Internet-Drafts are draft documents valid for a maximum of six months
 and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-The list of current Internet-Drafts can be accessed at
-<a href='http://www.ietf.org/ietf/1id-abstracts.txt'>http://www.ietf.org/ietf/1id-abstracts.txt</a>.</p>
-<p>
-The list of Internet-Draft Shadow Directories can be accessed at
-<a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
-<p>
-This Internet-Draft will expire on July 8, 2010.</p>
+This Internet-Draft will expire on December 8, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -208,7 +202,7 @@ carefully, as they describe your rights and restrictions with respect
 to this document. Code Components extracted from this document must
 include Simplified BSD License text as described in Section 4.e of
 the Trust Legal Provisions and are provided without warranty as
-described in the BSD License.</p>
+described in the Simplified BSD License.</p>
 <a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
@@ -253,7 +247,7 @@ Authors' Addresses<br />
 Introduction</h3>
 
 <p>
- This draft describes DHCPv6 options that can be used to provide configuration
+ This draft describes DHCPv6 options that SHOULD be used to provide configuration
  information for a node that must be booted using the network, rather than
  from local storage.
 
@@ -267,7 +261,7 @@ Introduction</h3>
 </p>
 <p>
 A typical boot file would be, for example, an operating system kernel or a boot
-loader program. To be able to execute such a file, the firmware (BIOS) running
+loader program. To be able to execute such a file, the firmware running
 on the client node must perform the following two steps (see
 <a class='info' href='#bootsteps'>Figure&nbsp;1<span> (</span><span class='info'>Network Boot Sequence</span><span>)</span></a>): First get all information which is required for
 downloading and executing the boot file. Second, download the boot file and
@@ -294,18 +288,23 @@ execute it.
 
 </p>
 <p>
-Information that is required for booting over the network can include
-information about the server on which the boot files can be found, the protocol
-to be used for the download (for example <a class='info' href='#RFC2616'>HTTP<span> (</span><span class='info'>Fielding, R., Gettys, J., Mogul, J., Frystyk, H., Masinter, L., Leach, P., and T. Berners-Lee, &ldquo;Hypertext Transfer Protocol -- HTTP/1.1,&rdquo; June&nbsp;1999.</span><span>)</span></a> [RFC2616] or
-<a class='info' href='#RFC1350'>TFTP<span> (</span><span class='info'>Sollins, K., &ldquo;The TFTP Protocol (Revision 2),&rdquo; July&nbsp;1992.</span><span>)</span></a> [RFC1350]), the name of the boot file and additional
-parameters which should be passed to the OS kernel or boot loader program
-respectively.
+The information which is required for booting over the network MUST include at
+least the details about the server on which the boot files can be found, the
+protocol to be used for the download (for example
+<a class='info' href='#RFC2616'>HTTP<span> (</span><span class='info'>Fielding, R., Gettys, J., Mogul, J., Frystyk, H., Masinter, L., Leach, P., and T. Berners-Lee, &ldquo;Hypertext Transfer Protocol -- HTTP/1.1,&rdquo; June&nbsp;1999.</span><span>)</span></a> [RFC2616] or <a class='info' href='#RFC1350'>TFTP<span> (</span><span class='info'>Sollins, K., &ldquo;The TFTP Protocol (Revision 2),&rdquo; July&nbsp;1992.</span><span>)</span></a> [RFC1350]) and
+the path and name of the boot file on the server. Additionally, the server and
+client MAY exchange information about the parameters which should be passed to
+the OS kernel or boot loader program respectively, or information about the
+supported boot environment.
 
 </p>
 <p>
 DHCPv6 allows client nodes to ask a DHCPv6 server for configuration
 parameters. This document provides new options which a client can request
 from the DHCPv6 server to satisfy its requirements for booting.
+It also introduces a new IANA registry for processor
+architecture types which are used by the OPTION_CLIENT_ARCH_TYPE option
+(see <a class='info' href='#clientarch'>Section&nbsp;3.3<span> (</span><span class='info'>Client System Architecture Type Option</span><span>)</span></a>).
 
 </p>
 <a name="anchor2"></a><br /><hr />
@@ -322,7 +321,7 @@ document are to be interpreted as described in
 </p>
 <p>
 Terminology specific to IPv6 and DHCPv6 are used in the same way as defined
-in the "Terminology" sections of <a class='info' href='#RFC3315'>RFC 3315<span> (</span><span class='info'>Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;Dynamic Host Configuration Protocol for IPv6 (DHCPv6),&rdquo; July&nbsp;2003.</span><span>)</span></a> [RFC3315].
+in the "Terminology" sections of <a class='info' href='#RFC3315'>[RFC3315]<span> (</span><span class='info'>Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;Dynamic Host Configuration Protocol for IPv6 (DHCPv6),&rdquo; July&nbsp;2003.</span><span>)</span></a>.
 
 </p>
 <a name="options"></a><br /><hr />
@@ -332,7 +331,8 @@ Options</h3>
 
 <p>
 Option formats comply with DHCPv6 options per <a class='info' href='#RFC3315'>[RFC3315]<span> (</span><span class='info'>Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;Dynamic Host Configuration Protocol for IPv6 (DHCPv6),&rdquo; July&nbsp;2003.</span><span>)</span></a>
-(section 6).
+(section 6). The boot-file-url option (see <a class='info' href='#booturl'>Section&nbsp;3.1<span> (</span><span class='info'>Boot File Uniform Resource Locator (URL) Option</span><span>)</span></a>) is
+mandatory for booting, all other options are optional.
 
 </p>
 <a name="booturl"></a><br /><hr />
@@ -385,10 +385,10 @@ Boot File Uniform Resource Locator (URL) Option</h3>
 
 </p>
 <p>
- If the URL is expressed using an IPv6 address rather than a domain name, the
- address in the URL then MUST be enclosed in "[" and "]" characters,
+ If the host in the URL is expressed using an IPv6 address rather than a domain
+ name, the address in the URL then MUST be enclosed in "[" and "]" characters,
  conforming to <a class='info' href='#RFC3986'>[RFC3986]<span> (</span><span class='info'>Berners-Lee, T., Fielding, R., and L. Masinter, &ldquo;Uniform Resource Identifier (URI): Generic Syntax,&rdquo; January&nbsp;2005.</span><span>)</span></a>.
- Clients that have DNS implementations should support the use of domain names
+ Clients that have DNS implementations SHOULD support the use of domain names
  in the URL.
 
 </p>
@@ -398,11 +398,11 @@ Boot File Uniform Resource Locator (URL) Option</h3>
 Boot File Parameters Option</h3>
 
 <p>
- This option is sent by the server to the client. It consists of multiple
- UTF-8 strings. They are used to specify parameters for the boot file
- (similar to the command line arguments in most modern operating systems).
- For example, these parameters could be used to specify the root file system
- of the OS kernel, or where a second stage boot loader can download its
+ This option is sent by the server to the client. It consists of multiple UTF-8
+ (<a class='info' href='#RFC3629'>[RFC3629]<span> (</span><span class='info'>Yergeau, F., &ldquo;UTF-8, a transformation format of ISO 10646,&rdquo; November&nbsp;2003.</span><span>)</span></a>) strings. They are used to specify parameters for
+ the boot file (similar to the command line arguments in most modern operating
+ systems). For example, these parameters could be used to specify the root file
+ system of the OS kernel, or where a second stage boot loader can download its
  configuration file from.
 
 </p>
@@ -463,8 +463,8 @@ Boot File Parameters Option</h3>
 <p>
  When the boot firmware executes the boot file which has been
  specified in the OPT_BOOTFILE_URL option, it MUST pass these
- parameters in the order that they appear in the OPT_BOOTFILE_PARAM
- option.
+ parameters, if present, in the order that they appear in the
+ OPT_BOOTFILE_PARAM option.
 
 </p>
 <a name="clientarch"></a><br /><hr />
@@ -522,7 +522,7 @@ Client System Architecture Type Option</h3>
 
 </p>
 <p>
- The client can use this option to send a list of supported architecture types
+ The client MAY use this option to send a list of supported architecture types
  to the server, so the server can decide which boot file should be provided to
  the client. If a client supports more than one pre-boot environment (for
  example both, 32-bit and 64-bit executables), the most preferred architecture
@@ -531,8 +531,9 @@ Client System Architecture Type Option</h3>
 
 </p>
 <p>
- The server can use this option to inform the client about the pre-boot
- environments which are supported by the boot file.
+ If the client used this option in the request, the server SHOULD this option
+ to inform the client about the pre-boot environments which are supported by
+ the boot file.
  The list MUST only contain architecture types which have initially been
  queried by the client. The items MUST also be listed in order of descending
  priority.
@@ -651,7 +652,7 @@ IANA considerations</h3>
 
 <p>
   The following options need to be assigned by the IANA from the option number
-  space defined in the chapter 22 of the <a class='info' href='#RFC3315'>DHCPv6 RFC<span> (</span><span class='info'>Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;Dynamic Host Configuration Protocol for IPv6 (DHCPv6),&rdquo; July&nbsp;2003.</span><span>)</span></a> [RFC3315].
+  space defined in the chapter 24 of the <a class='info' href='#RFC3315'>DHCPv6 RFC<span> (</span><span class='info'>Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;Dynamic Host Configuration Protocol for IPv6 (DHCPv6),&rdquo; July&nbsp;2003.</span><span>)</span></a> [RFC3315].
  
 </p><table class="full" align="center" border="0" cellpadding="2" cellspacing="2">
 <col align="center"><col align="center"><col align="center">
@@ -703,7 +704,7 @@ In untrusted networks, a rogue DHCPv6 server could send the new DHCPv6
 options described in this document. The booting clients could then be provided
 with a wrong URL so that the boot either fails, or even worse, the client boots
 the wrong operating system which has been provided by a malicious file server.
-To prevent this kind of attack, clients can use authentication of DHCPv6
+To prevent this kind of attack, clients SHOULD use authentication of DHCPv6
 messages (see chapter 21. in <a class='info' href='#RFC3315'>[RFC3315]<span> (</span><span class='info'>Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;Dynamic Host Configuration Protocol for IPv6 (DHCPv6),&rdquo; July&nbsp;2003.</span><span>)</span></a>).
 
 </p>
@@ -714,16 +715,17 @@ This can become a security risk since the URLs can contain sensitive
 information like user names and passwords (for example a URL like
 "ftp://username:password@servername/path/file").
 At the current point in time, there is no possibility to send encrypted DHCPv6
-messages, so it is strongly recommended not to use sensitive information in the
-URLs in untrusted networks.
+messages, so it is strongly RECOMMENDED not to use sensitive information in the
+URLs in untrusted networks (using passwords in URLs is deprecated anyway
+according to <a class='info' href='#RFC3986'>[RFC3986]<span> (</span><span class='info'>Berners-Lee, T., Fielding, R., and L. Masinter, &ldquo;Uniform Resource Identifier (URI): Generic Syntax,&rdquo; January&nbsp;2005.</span><span>)</span></a>).
 
 </p>
 <p>
  Even if the DHCPv6 transaction is secured, this does not protect against
  attacks on the boot file download channel. Consequently, we recommend
- that either a protocol like HTTPS (see <a class='info' href='#RFC2817'>[RFC2817]<span> (</span><span class='info'>Khare, R. and S. Lawrence, &ldquo;Upgrading to TLS Within HTTP/1.1,&rdquo; May&nbsp;2000.</span><span>)</span></a> and
- <a class='info' href='#RFC2818'>[RFC2818]<span> (</span><span class='info'>Rescorla, E., &ldquo;HTTP Over TLS,&rdquo; May&nbsp;2000.</span><span>)</span></a>)  be used to prevent spoofing, or that
- the boot loader implementation implement a mechanism for signing
+ that either protocols like HTTPS <a class='info' href='#RFC2818'>[RFC2818]<span> (</span><span class='info'>Rescorla, E., &ldquo;HTTP Over TLS,&rdquo; May&nbsp;2000.</span><span>)</span></a> or TLS within
+ HTTP <a class='info' href='#RFC2817'>[RFC2817]<span> (</span><span class='info'>Khare, R. and S. Lawrence, &ldquo;Upgrading to TLS Within HTTP/1.1,&rdquo; May&nbsp;2000.</span><span>)</span></a> are used to prevent spoofing, or that
+ the boot loader software implements a mechanism for signing
  boot images and a configurable signing key in memory, so that if a malicious
  image is provided, it can be detected and rejected.
 
@@ -759,6 +761,8 @@ References</h3>
 <td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="http://www.rfc-editor.org/rfc/rfc2119.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2119.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2119.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3315">[RFC3315]</a></td>
 <td class="author-text">Droms, R., Bound, J., Volz, B., Lemon, T., Perkins, C., and M. Carney, &ldquo;<a href="http://tools.ietf.org/html/rfc3315">Dynamic Host Configuration Protocol for IPv6 (DHCPv6)</a>,&rdquo; RFC&nbsp;3315, July&nbsp;2003 (<a href="http://www.rfc-editor.org/rfc/rfc3315.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC3629">[RFC3629]</a></td>
+<td class="author-text">Yergeau, F., &ldquo;<a href="http://tools.ietf.org/html/rfc3629">UTF-8, a transformation format of ISO 10646</a>,&rdquo; STD&nbsp;63, RFC&nbsp;3629, November&nbsp;2003 (<a href="http://www.rfc-editor.org/rfc/rfc3629.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3986">[RFC3986]</a></td>
 <td class="author-text"><a href="mailto:timbl@w3.org">Berners-Lee, T.</a>, <a href="mailto:fielding@gbiv.com">Fielding, R.</a>, and <a href="mailto:LMM@acm.org">L. Masinter</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc3986">Uniform Resource Identifier (URI): Generic Syntax</a>,&rdquo; STD&nbsp;66, RFC&nbsp;3986, January&nbsp;2005 (<a href="http://www.rfc-editor.org/rfc/rfc3986.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc3986.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc3986.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4173">[RFC4173]</a></td>
