--- a/draft-ietf-isis-genapp-03.html
+++ b/draft-ietf-isis-genapp-03.html
@@ -8,7 +8,7 @@
         body {
                 font-family: verdana, charcoal, helvetica, arial, sans-serif;
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		color: #000; background-color: #FFF;
                 margin: 2em;
         }
@@ -84,11 +84,11 @@
         p { margin-left: 2em; margin-right: 2em; }
         p.copyright { font-size: x-small; }
         p.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; margin-left: 3em; }
         table.toc { margin: 0 0 0 3em; padding: 0; border: 0; vertical-align: text-top; }
         td.toc { font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		font-weight: bold; vertical-align: text-top; }
 
         ol.text { margin-left: 2em; margin-right: 2em; }
@@ -121,7 +121,7 @@
         /* RFC-2629 <texttable>s. */
         table.all, table.full, table.headers, table.none {
                 font-size: 85%;
-		max-width: 40em; 
+		max-width: 60em; 
 		text-align: center; border-width: 2px;
                 vertical-align: top; border-collapse: collapse;
         }
@@ -153,10 +153,10 @@
 <tr><td class="header">Network Working Group</td><td class="header">L. Ginsberg</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">S. Previdi</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">M. Shand</td></tr>
-<tr><td class="header">Expires: July 10, 2010</td><td class="header">Cisco Systems</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">January 06, 2010</td></tr>
+<tr><td class="header">Expires: January 7, 2011</td><td class="header">Cisco Systems</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">July 06, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Advertising Generic Information in IS-IS<br />draft-ietf-isis-genapp-02.txt</h1>
+<h1><br />Advertising Generic Information in IS-IS<br />draft-ietf-isis-genapp-03.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -167,26 +167,20 @@
 </p>
 <h3>Status of this Memo</h3>
 <p>
-This Internet-Draft is submitted to IETF in full
+This Internet-Draft is submitted  in full
 conformance with the provisions of BCP&nbsp;78 and BCP&nbsp;79.</p>
 <p>
 Internet-Drafts are working documents of the Internet Engineering
-Task Force (IETF), its areas, and its working groups.
-Note that other groups may also distribute working documents as
-Internet-Drafts.</p>
+Task Force (IETF).  Note that other groups may also distribute
+working documents as Internet-Drafts.  The list of current
+Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>
 Internet-Drafts are draft documents valid for a maximum of six months
 and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-The list of current Internet-Drafts can be accessed at
-<a href='http://www.ietf.org/ietf/1id-abstracts.txt'>http://www.ietf.org/ietf/1id-abstracts.txt</a>.</p>
-<p>
-The list of Internet-Draft Shadow Directories can be accessed at
-<a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
-<p>
-This Internet-Draft will expire on July 10, 2010.</p>
+This Internet-Draft will expire on January 7, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -201,7 +195,7 @@ carefully, as they describe your rights and restrictions with respect
 to this document. Code Components extracted from this document must
 include Simplified BSD License text as described in Section 4.e of
 the Trust Legal Provisions and are provided without warranty as
-described in the BSD License.</p>
+described in the Simplified BSD License.</p>
 <a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
@@ -287,8 +281,9 @@ Overview</h3>
       specification.
 </p>
 <p>In order to minimize the impact advertisement of GENINFO may have on
-      the operation of routing, such advertisements SHOULD occur in the
-      context of a non-zero instance of the IS-IS protocol as defined in <a class='info' href='#I-D.ietf-isis-mi'>[I&#8209;D.ietf&#8209;isis&#8209;mi]<span> (</span><span class='info'>Previdi, S., Ginsberg, L., Shand, M., Ward, D., and A. Roy, &ldquo;IS-IS Multi-Instance,&rdquo; October&nbsp;2009.</span><span>)</span></a>.
+      the operation of routing, such advertisements MUST occur in the context
+      of a non-zero instance of the IS-IS protocol as defined in <a class='info' href='#I-D.ietf-isis-mi'>[I&#8209;D.ietf&#8209;isis&#8209;mi]<span> (</span><span class='info'>Previdi, S., Ginsberg, L., Shand, M., Ward, D., and A. Roy, &ldquo;IS-IS Multi-Instance,&rdquo; October&nbsp;2009.</span><span>)</span></a>. Exceptions to this restriction MAY be
+      allowed subject to restrictions discussed later in this document.
 </p>
 <p>
 </p>
@@ -311,11 +306,11 @@ Encoding Format for GENINFO</h3>
 <p>In order to support these goals, a new IANA registry is required.
       This registry is required to manage the assignment of IS-IS GENINFO
       Application Identifiers. These numbers are unsigned 16 bit numbers
-      ranging in value from 1 to 65535. The registry is also required to
-      manage the assignment of application specific subTLV codepoints. These
-      numbers are unsigned 8 bit numbers ranging in value from 0 to 255. The
+      ranging in value from 1 to 65535. Application specific subTLV codepoints
+      are unsigned 8 bit numbers ranging in value from 0 to 255. The
       assignment of the subTLV codepoints is scoped by the Application
-      Identifier.
+      Identifier. Management of the application specific subTLV codepoints is
+      outside the scope of this document.
 </p>
 <p>
 </p>
@@ -434,15 +429,13 @@ Use of subTLVs in GENINFO TLV</h3>
         The scope of the codepoints used in such subTLVs is defined by the
         GENINFO TLV codepoint AND the Application ID i.e. the subTLV
         codepoints are private to the application. Such subTLVs are referred
-        to as APPSUBTLVs and MUST be assigned via the GENINFO-REG IANA
-        registry.
+        to as APPSUBTLVs.
 </p>
 <p>Additional levels of APPSUBTLVs may be required when there is
         variable information which is scoped by a specific APPSUBTLV. These
         "nested" subTLVs MUST be encoded in the same manner as subTLVs i.e.
         with a one-octet Type field, a one-octet Length field, and zero or
-        more octets of Value. These types MUST also be assigned via the
-        GENINFO-REG IANA registry.
+        more octets of Value.
 </p>
 <p>The use of additional levels of subTLVs is discouraged due to the
         inherent inefficiency in encoding introduced because the parent subTLV
@@ -465,10 +458,11 @@ Standardization Requirements</h3>
 </p>
 <p>GENINFO is intended to advertise information on behalf of
         applications whose operations have been defined in public documents.
-        Therefore the uses of GENINFO MUST be standardized.
-</p>
-<p>GENINFO is NOT intended to be used for proprietary or experimental
+        GENINFO is NOT intended to be used for proprietary or experimental
         purposes.
+</p>
+<p>The public document MUST include a description of the subTLV
+        allocation policy.
 </p>
 <a name="anchor7"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -589,12 +583,16 @@ Use of a Separate Protocol Instance</h3>
       each router consumes resources whose primary responsibility is to
       efficiently respond to reachability changes in the network.
 </p>
-<p>Advertisement of GENINFO therefore SHOULD occur in the context of a
-      non-zero instance of the IS-IS protocol as defined in <a class='info' href='#I-D.ietf-isis-mi'>[I&#8209;D.ietf&#8209;isis&#8209;mi]<span> (</span><span class='info'>Previdi, S., Ginsberg, L., Shand, M., Ward, D., and A. Roy, &ldquo;IS-IS Multi-Instance,&rdquo; October&nbsp;2009.</span><span>)</span></a>. The use of a separate instance of the
-      protocol allows both the flooding and the processing of the non-routing
-      information to be decoupled from the information necessary to support
-      correct routing of data in the network. The flooding and processing of
-      non-routing information can then be prioritized appropriately.
+<p>Advertisement of GENINFO therefore MUST occur in the context of a
+      non-zero instance of the IS-IS protocol as defined in <a class='info' href='#I-D.ietf-isis-mi'>[I&#8209;D.ietf&#8209;isis&#8209;mi]<span> (</span><span class='info'>Previdi, S., Ginsberg, L., Shand, M., Ward, D., and A. Roy, &ldquo;IS-IS Multi-Instance,&rdquo; October&nbsp;2009.</span><span>)</span></a>. Exceptions to this policy MAY be
+      allowed only when there exists a standards track RFC which defines the
+      application.
+</p>
+<p>The use of a separate instance of the protocol allows both the
+      flooding and the processing of the non-routing information to be
+      decoupled from the information necessary to support correct routing of
+      data in the network. The flooding and processing of non-routing
+      information can then be prioritized appropriately.
 </p>
 <p>Use of a separate protocol instance to advertise GENINFO does not
       eliminate the need to use prudence in the frequency with which such
@@ -657,17 +655,26 @@ IANA Considerations</h3>
 <p>This document also defines a new registry which needs to be
       created.
 </p>
-<p>The new registry is required to manage two types of assigned
-      numbers:
+<p>The new registry is required to manage the assignment of Application
+      Identifiers which may be used in the Generic Information TLV. These
+      identifiers are unsigned 16 bit numbers ranging in value from 1 to
+      65535. The value 0 is reserved. Registration procedure is "Specification
+      Required" as defined in <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>
 </p>
-<p>1)Application Identifiers which may be used in the Generic
-      Information TLV. These identifiers are unsigned 16 bit numbers ranging
-      in value from 1 to 65535.
+<p>The following information MUST be specified in the registry:
 </p>
-<p>2)Application specific subTLV codepoints which may be used in a
-      GENINFO TLV when a specific Application Identifier is used. These
-      numbers are unsigned 8 bit numbers ranging in value from 0 to 255.
-</p>
+<p></p>
+<ul class="text">
+<li>ID Value (1-65535)
+</li>
+<li>Description
+</li>
+<li>Allowed in Instance zero (Y/N)
+</li>
+<li>Reference Specification
+</li>
+</ul>
+
 <a name="anchor15"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.9"></a><h3>9.&nbsp;
@@ -698,6 +705,8 @@ References</h3>
 <td class="author-text"><a href="mailto:sob@harvard.edu">Bradner, S.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; BCP&nbsp;14, RFC&nbsp;2119, March&nbsp;1997 (<a href="http://www.rfc-editor.org/rfc/rfc2119.txt">TXT</a>, <a href="http://xml.resource.org/public/rfc/html/rfc2119.html">HTML</a>, <a href="http://xml.resource.org/public/rfc/xml/rfc2119.xml">XML</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4971">[RFC4971]</a></td>
 <td class="author-text">Vasseur, JP., Shen, N., and R. Aggarwal, &ldquo;<a href="http://tools.ietf.org/html/rfc4971">Intermediate System to Intermediate System (IS-IS) Extensions for Advertising Router Information</a>,&rdquo; RFC&nbsp;4971, July&nbsp;2007 (<a href="http://www.rfc-editor.org/rfc/rfc4971.txt">TXT</a>).</td></tr>
+<tr><td class="author-text" valign="top"><a name="RFC5226">[RFC5226]</a></td>
+<td class="author-text">Narten, T. and H. Alvestrand, &ldquo;<a href="http://tools.ietf.org/html/rfc5226">Guidelines for Writing an IANA Considerations Section in RFCs</a>,&rdquo; BCP&nbsp;26, RFC&nbsp;5226, May&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5226.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC5305">[RFC5305]</a></td>
 <td class="author-text">Li, T. and H. Smit, &ldquo;<a href="http://tools.ietf.org/html/rfc5305">IS-IS Extensions for Traffic Engineering</a>,&rdquo; RFC&nbsp;5305, October&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5305.txt">TXT</a>).</td></tr>
 </table>
