draft-ietf-ipsecme-eap-mutual-04

--- a/draft-ietf-ipsecme-eap-mutual-04.html
+++ b/draft-ietf-ipsecme-eap-mutual-04.html
@@ -153,12 +153,12 @@
 <tr><td class="header">Network Working Group</td><td class="header">P. Eronen</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Nokia</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">H. Tschofenig</td></tr>
-<tr><td class="header">Expires: December 3, 2010</td><td class="header">Nokia Siemens Networks</td></tr>
+<tr><td class="header">Expires: December 16, 2010</td><td class="header">Nokia Siemens Networks</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Y. Sheffer</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Independent</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">June 1, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">June 14, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />An Extension for EAP-Only Authentication in IKEv2<br />draft-ietf-ipsecme-eap-mutual-03.txt</h1>
+<h1><br />An Extension for EAP-Only Authentication in IKEv2<br />draft-ietf-ipsecme-eap-mutual-04.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -187,7 +187,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on December 3, 2010.</p>
+This Internet-Draft will expire on December 16, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -699,15 +699,11 @@ References</h3>
 <td class="author-text">Eronen, P., Hiller, T., and G. Zorn, &ldquo;<a href="http://tools.ietf.org/html/rfc4072">Diameter Extensible Authentication Protocol (EAP) Application</a>,&rdquo; RFC&nbsp;4072, August&nbsp;2005 (<a href="http://www.rfc-editor.org/rfc/rfc4072.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4306">[RFC4306]</a></td>
 <td class="author-text">Kaufman, C., &ldquo;<a href="http://tools.ietf.org/html/rfc4306">Internet Key Exchange (IKEv2) Protocol</a>,&rdquo; RFC&nbsp;4306, December&nbsp;2005 (<a href="http://www.rfc-editor.org/rfc/rfc4306.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC5226">[RFC5226]</a></td>
-<td class="author-text">Narten, T. and H. Alvestrand, &ldquo;<a href="http://tools.ietf.org/html/rfc5226">Guidelines for Writing an IANA Considerations Section in RFCs</a>,&rdquo; BCP&nbsp;26, RFC&nbsp;5226, May&nbsp;2008 (<a href="http://www.rfc-editor.org/rfc/rfc5226.txt">TXT</a>).</td></tr>
 </table>
 
 <a name="rfc.references2"></a><br /><hr />
 <h3>8.2.&nbsp;Informative References</h3>
 <table width="99%" border="0">
-<tr><td class="author-text" valign="top"><a name="I-D.aboba-pppext-eapgss">[I-D.aboba-pppext-eapgss]</a></td>
-<td class="author-text">Aboba, B. and D. Simon, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-aboba-pppext-eapgss-12.txt">EAP GSS Authentication Protocol</a>,&rdquo; draft-aboba-pppext-eapgss-12 (work in progress), April&nbsp;2002 (<a href="http://www.ietf.org/internet-drafts/draft-aboba-pppext-eapgss-12.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.arkko-eap-service-identity-auth">[I-D.arkko-eap-service-identity-auth]</a></td>
 <td class="author-text">Arkko, J. and P. Eronen, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-arkko-eap-service-identity-auth-04.txt">Authenticated Service Information for the Extensible Authentication Protocol  (EAP)</a>,&rdquo; draft-arkko-eap-service-identity-auth-04 (work in progress), October&nbsp;2005 (<a href="http://www.ietf.org/internet-drafts/draft-arkko-eap-service-identity-auth-04.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.clancy-emu-aaapay">[I-D.clancy-emu-aaapay]</a></td>
@@ -718,27 +714,18 @@ References</h3>
 <td class="author-text">Carlson, J., Aboba, B., and H. Haverinen, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-pppext-eap-srp-03.txt">EAP SRP-SHA1 Authentication Protocol</a>,&rdquo; draft-ietf-pppext-eap-srp-03 (work in progress), July&nbsp;2001.</td></tr>
 <tr><td class="author-text" valign="top"><a name="I-D.sheffer-emu-eap-eke">[I-D.sheffer-emu-eap-eke]</a></td>
 <td class="author-text">Sheffer, Y., Zorn, G., Tschofenig, H., and S. Fluhrer, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-sheffer-emu-eap-eke-06.txt">An EAP Authentication Method Based on the EKE Protocol</a>,&rdquo; draft-sheffer-emu-eap-eke-06 (work in progress), April&nbsp;2010 (<a href="http://www.ietf.org/internet-drafts/draft-sheffer-emu-eap-eke-06.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="IEEE80211">[IEEE80211]</a></td>
-<td class="author-text">Institute of Electrical and Electronics Engineers, &ldquo;Information technology - Telecommunications and information exchange
-  between systems - Local and metropolitan area networks - Specific
-  Requirements Part 11: Wireless LAN Medium Access Control (MAC) and Physical
-  Layer (PHY) Specifications,&rdquo; IEEE Standard&nbsp;802.11-1999, 1999.</td></tr>
 <tr><td class="author-text" valign="top"><a name="IEEE80211i">[IEEE80211i]</a></td>
 <td class="author-text">Institute of Electrical and Electronics Engineers, &ldquo;IEEE Standard for Information technology - Telecommunications and information exchange between systems - Local and metropolitan area networks - Specific requirements - Part 11: Wireless Medium Access Control (MAC) and Physical Layer (PHY) specifications: Amendment 6: Medium Access Control (MAC) Security Enhancements,&rdquo; IEEE Standard&nbsp;802.11i-2004, July&nbsp;2004.</td></tr>
 <tr><td class="author-text" valign="top"><a name="IEEE8021X">[IEEE8021X]</a></td>
 <td class="author-text">Institute of Electrical and Electronics Engineers, &ldquo;Local and Metropolitan Area Networks: Port-Based Network Access Control,&rdquo; IEEE Standard&nbsp;802.1X-2001, 2001.</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC1661">[RFC1661]</a></td>
 <td class="author-text"><a href="mailto:Bill.Simpson@um.cc.umich.edu">Simpson, W.</a>, &ldquo;<a href="http://tools.ietf.org/html/rfc1661">The Point-to-Point Protocol (PPP)</a>,&rdquo; STD&nbsp;51, RFC&nbsp;1661, July&nbsp;1994 (<a href="http://www.rfc-editor.org/rfc/rfc1661.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC2865">[RFC2865]</a></td>
-<td class="author-text">Rigney, C., Willens, S., Rubens, A., and W. Simpson, &ldquo;<a href="http://tools.ietf.org/html/rfc2865">Remote Authentication Dial In User Service (RADIUS)</a>,&rdquo; RFC&nbsp;2865, June&nbsp;2000 (<a href="http://www.rfc-editor.org/rfc/rfc2865.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3579">[RFC3579]</a></td>
 <td class="author-text">Aboba, B. and P. Calhoun, &ldquo;<a href="http://tools.ietf.org/html/rfc3579">RADIUS (Remote Authentication Dial In User Service) Support For Extensible Authentication Protocol (EAP)</a>,&rdquo; RFC&nbsp;3579, September&nbsp;2003 (<a href="http://www.rfc-editor.org/rfc/rfc3579.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4186">[RFC4186]</a></td>
 <td class="author-text">Haverinen, H. and J. Salowey, &ldquo;<a href="http://tools.ietf.org/html/rfc4186">Extensible Authentication Protocol Method for Global System for Mobile Communications (GSM) Subscriber Identity Modules (EAP-SIM)</a>,&rdquo; RFC&nbsp;4186, January&nbsp;2006 (<a href="http://www.rfc-editor.org/rfc/rfc4186.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4187">[RFC4187]</a></td>
 <td class="author-text">Arkko, J. and H. Haverinen, &ldquo;<a href="http://tools.ietf.org/html/rfc4187">Extensible Authentication Protocol Method for 3rd Generation Authentication and Key Agreement (EAP-AKA)</a>,&rdquo; RFC&nbsp;4187, January&nbsp;2006 (<a href="http://www.rfc-editor.org/rfc/rfc4187.txt">TXT</a>).</td></tr>
-<tr><td class="author-text" valign="top"><a name="RFC4430">[RFC4430]</a></td>
-<td class="author-text">Sakane, S., Kamada, K., Thomas, M., and J. Vilhuber, &ldquo;<a href="http://tools.ietf.org/html/rfc4430">Kerberized Internet Negotiation of Keys (KINK)</a>,&rdquo; RFC&nbsp;4430, March&nbsp;2006 (<a href="http://www.rfc-editor.org/rfc/rfc4430.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4746">[RFC4746]</a></td>
 <td class="author-text">Clancy, T. and W. Arbaugh, &ldquo;<a href="http://tools.ietf.org/html/rfc4746">Extensible Authentication Protocol (EAP) Password Authenticated Exchange</a>,&rdquo; RFC&nbsp;4746, November&nbsp;2006 (<a href="http://www.rfc-editor.org/rfc/rfc4746.txt">TXT</a>).</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC4763">[RFC4763]</a></td>
@@ -767,24 +754,30 @@ Change Log</h3>
 </p>
 <a name="anchor9"></a><br /><hr />
 <a name="rfc.section.A.1"></a><h3>A.1.&nbsp;
+-04</h3>
+
+<p>Anti-nit.
+</p>
+<a name="anchor10"></a><br /><hr />
+<a name="rfc.section.A.2"></a><h3>A.2.&nbsp;
 -03</h3>
 
 <p>Implemented IETF LC comments from Dan Harkins and Tero Kivinen.
 </p>
-<a name="anchor10"></a><br /><hr />
-<a name="rfc.section.A.2"></a><h3>A.2.&nbsp;
+<a name="anchor11"></a><br /><hr />
+<a name="rfc.section.A.3"></a><h3>A.3.&nbsp;
 -02</h3>
 
 <p>Implemented several WGLC comments. EAP methods are required to be resistant to dictionary attacks to be used here.
 </p>
-<a name="anchor11"></a><br /><hr />
-<a name="rfc.section.A.3"></a><h3>A.3.&nbsp;
+<a name="anchor12"></a><br /><hr />
+<a name="rfc.section.A.4"></a><h3>A.4.&nbsp;
 -01</h3>
 
 <p>List of proposed EAP methods is now informative, not normative. 
 </p>
-<a name="anchor12"></a><br /><hr />
-<a name="rfc.section.A.4"></a><h3>A.4.&nbsp;
+<a name="anchor13"></a><br /><hr />
+<a name="rfc.section.A.5"></a><h3>A.5.&nbsp;
 draft-ietf-ipsecme-mutual-auth-00</h3>
 
 <p>Initial WG draft, based on draft-eronen-ipsec-ikev2-eap-auth-07, with the following changes: if the responder does not support this mechanism, the initiator reverts to normal RFC 4306 behavior; the initiator must abort immediately if it doesn't like
@@ -833,7 +826,7 @@ Unauthenticated public keys in AUTH payload (message 4)</h3>
 <p>If using RSA, the overhead of signature verification is quite
   small, compared to g^xy calculation.
 </p>
-<a name="anchor13"></a><br /><hr />
+<a name="anchor14"></a><br /><hr />
 <a name="rfc.section.B.3"></a><h3>B.3.&nbsp;
 Using EAP derived session keys for IKEv2</h3>
 
