draft-ietf-dime-local-keytran-13

--- a/draft-ietf-dime-local-keytran-13.html
+++ b/draft-ietf-dime-local-keytran-13.html
@@ -425,7 +425,7 @@
   </table>
 
   <p class="title">Diameter Attribute-Value Pairs for Cryptographic Key Transport<br />
-  <span class="filename">draft-ietf-dime-local-keytran-12</span></p>
+  <span class="filename">draft-ietf-dime-local-keytran-13</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>Some Authentication, Authorization, and Accounting (AAA) applications require the transport of cryptographic keying material.  This document specifies a set of Attribute-Value Pairs (AVPs) providing native Diameter support of cryptographic key delivery.  </p>
@@ -602,7 +602,7 @@ Key ::= &lt; AVP Header: AC1 &gt;
 <p id="rfc.section.5.2.p.1">IANA is requested to create a new registry for values assigned to the Key-Type AVP and populated with the decimal values defined in this document (<a href="#K-T">Section 3.1.1</a>).  New values may be assigned for the Key-Type AVP using the "Specification Required" policy <a href="#RFC5226">[RFC5226]</a>; once values have been assigned, they MUST NOT be deleted, replaced or modified.  </p>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> Acknowledgements</h1>
-<p id="rfc.section.6.p.1">Thanks to Niclas Comstedt, Semyon Mizikovsky, Hannes Tschofenig, Joe Salowey, Tom Taylor, Frank Xia, Lionel Morand, Dan Romascanu, Bernard Aboba, Jouni Korhonen and Sebastien Decugis for useful comments, suggestions and review.  </p>
+<p id="rfc.section.6.p.1">Thanks (in no particular order) to Niclas Comstedt, Semyon Mizikovsky, Hannes Tschofenig, Joe Salowey, Tom Taylor, Frank Xia, Lionel Morand, Dan Romascanu, Bernard Aboba, Jouni Korhonen, Stephen Farrel, Joel Halpern, Phillip Hallam-Baker, Sean Turner and Sebastien Decugis for useful comments, suggestions and review.  </p>
 <h1 id="rfc.references">
 <a href="#rfc.references">7.</a> References</h1>
 <h1 id="rfc.references.1">
