draft-ietf-sip-eku-07

--- a/draft-ietf-sip-eku-07.html
+++ b/draft-ietf-sip-eku-07.html
@@ -241,11 +241,7 @@ IANA Considerations<br />
 <a href="#anchor5">8.</a>&nbsp;
 Acknowledgments<br />
 <a href="#rfc.references1">9.</a>&nbsp;
-References<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references1">9.1.</a>&nbsp;
 Normative References<br />
-&nbsp;&nbsp;&nbsp;&nbsp;<a href="#rfc.references2">9.2.</a>&nbsp;
-Informative References<br />
 <a href="#asn1">Appendix&nbsp;A.</a>&nbsp;
 ASN.1 Module<br />
 <a href="#rfc.authors">&#167;</a>&nbsp;
@@ -296,7 +292,7 @@ extensions are defined using ASN.1 <a class='info' href='#CCITT.X680.2002'>X.680
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 Problem statement</h3>
 
-<p>Consider the SIP <a class='info' href='#RFC3261'>RFC 3261<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;SIP: Session Initiation Protocol,&rdquo; June&nbsp;2002.</span><span>)</span></a> [2] trapezoid shown in <a class='info' href='#sip-trapezoid'>Figure&nbsp;1<span> (</span><span class='info'>SIP Trapezoid</span><span>)</span></a>.
+<p>Consider the SIP <a class='info' href='#RFC3261'>RFC 3261<span> (</span><span class='info'>Rosenberg, J., Schulzrinne, H., Camarillo, G., Johnston, A., Peterson, J., Sparks, R., Handley, M., and E. Schooler, &ldquo;SIP: Session Initiation Protocol,&rdquo; June&nbsp;2002.</span><span>)</span></a> [2] actors shown in <a class='info' href='#sip-trapezoid'>Figure&nbsp;1<span> (</span><span class='info'>SIP Trapezoid</span><span>)</span></a>.
 </p><br /><hr class="insert" />
 <a name="sip-trapezoid"></a>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
@@ -435,8 +431,8 @@ step given below as a part of the certificate validation:
   or not to accept the certificate for use as a SIP certificate.
 </li>
 <li>If the certificate contains the id-kp-sipDomain EKU extension, then
-  implementations MUST consider the certificate acceptable for use as a
-  SIP certificate.
+  implementations of this specification MUST consider the certificate 
+  acceptable for use as a SIP certificate.
 </li>
 <li>If the certificate does not contain the id-kp-sipDomain EKU value, but
   does contain the id-kp-anyExtendedKeyUsage EKU value, it is a matter of
@@ -498,14 +494,9 @@ Rosenberg, Russ Housley, Paul Hoffman, and Stephen Kent.
 the discussion on id-kp-anyExtendedKeyUsage, id-kpServerAuth and 
 id-kp-ClientAuth purposes in certificates.
 </p>
-<a name="rfc.references"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<a name="rfc.section.9"></a><h3>9.&nbsp;
-References</h3>
-
 <a name="rfc.references1"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>9.1.&nbsp;Normative References</h3>
+<h3>9.&nbsp;Normative References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="RFC2119">[1]</a></td>
 <td class="author-text">Bradner, S., &ldquo;<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>,&rdquo; RFC&nbsp;2119, March&nbsp;1997 (<a href="http://www.ietf.org/rfc/rfc2119.txt">TXT</a>).</td></tr>
@@ -525,12 +516,6 @@ Consultative Committee, &ldquo;Abstract Syntax Notation One (ASN.1): Specificati
 Consultative Committee, &ldquo;ASN.1 encoding rules: Specification of basic encoding Rules (BER), Canonical encoding rules (CER) and Distinguished encoding rules (DER),&rdquo; CCITT&nbsp;Recommendation X.690, July&nbsp;2002.</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC3263">[7]</a></td>
 <td class="author-text">Rosenberg, J. and H. Schulzrinne, &ldquo;<a href="http://tools.ietf.org/html/rfc3263">Session Initiation Protocol (SIP): Location SIP Servers</a>,&rdquo; RFC&nbsp;3263, June&nbsp;2002 (<a href="http://www.ietf.org/rfc/rfc3263.txt">TXT</a>).</td></tr>
-</table>
-
-<a name="rfc.references2"></a><br /><hr />
-<table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
-<h3>9.2.&nbsp;Informative References</h3>
-<table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="I-D.domain-certs">[8]</a></td>
 <td class="author-text">Gurbani, V., Lawrence, S., and A. Jeffrey, &ldquo;<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-domain-certs-04.txt.txt">Domain Certificates in the Session Initiation Protocol (SIP)</a>,&rdquo; draft-ietf-sip-domain-certs-04.txt (work in progress), May&nbsp;2009 (<a href="http://www.ietf.org/internet-drafts/draft-ietf-sip-domain-certs-04.txt">TXT</a>).</td></tr>
 </table>
