--- a/draft-ietf-mif-problem-statement-15.html
+++ b/draft-ietf-mif-problem-statement-15.html
@@ -409,12 +409,12 @@
 <td class="right">P. Seite</td>
 </tr>
 <tr>
-<td class="left">Expires: October 29, 2011</td>
+<td class="left">Expires: November 10, 2011</td>
 <td class="right">France Telecom - Orange</td>
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">April 27, 2011</td>
+<td class="right">May 09, 2011</td>
 </tr>
 
     	
@@ -422,7 +422,7 @@
   </table>
 
   <p class="title">Multiple Interfaces and Provisioning Domains Problem Statement<br />
-  <span class="filename">draft-ietf-mif-problem-statement-14.txt</span></p>
+  <span class="filename">draft-ietf-mif-problem-statement-15.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes issues encountered by a node attached to multiple provisioning domains. This node receives configuration information from each of its provisioning domains where some configuration objects are global to the node, others are local to the interface. Issues such as selecting the wrong interface to send trafic happen when conflicting node-scoped configuration objects are received and inappropriately used. Moreover, other issues are the result of simulatenous attachment to multiple networks, such as domain selection or addressing and naming space overlaps, regardless of the provisioning mechanism. While multiple provisioning domains are typically seen on nodes with multiple interfaces, this document also discusses single interface nodes situation.</p>
@@ -430,7 +430,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on October 29, 2011.</p>
+<p>This Internet-Draft will expire on November 10, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -511,7 +511,7 @@
 <p> </p>
 <p id="rfc.section.2.p.2">Provisioning domain <br><br> </p>
 
-<ul class="empty"><li>A set of consistent configuration information (e.g. Default router, Network prefixes, DNS,...). One administrative domain may have multiple provisioning domains.</li></ul>
+<ul class="empty"><li>A set of consistent configuration information (e.g.  Default router, Network prefixes, DNS,...) and the corresponding interface.  One administrative domain may have multiple provisioning domains. Successful attachment to the provisioning domain implies that the terminal attaches to the corresponding interface with appropriate configuration information.</li></ul>
 
 <p> </p>
 <p id="rfc.section.2.p.3">Reference to IP version <br><br> </p>
